# rust_pt_article_code

./: .gitignore  .gitmodules  Cargo.toml  README.md
data/: curve_lib.json  material_lib.json
data/curves/: brass_90Cu10Zn.csv  sky.spectra
data/scenes/: cornell_box.json  cornell_box_simple.json  test_spheres_0.json
output/: output.exr
src/: camera.rs  clm.rs  main.rs  material.rs  math.rs  parsing.rs  primitive.rs  random.rs  tonemap.rs
src/geometry/: mod.rs  sphere.rs
src/materials/: diffuse_emitter.rs  ggx.rs  lambertian.rs  mod.rs  passthrough.rs
src/math/: bounds.rs  color.rs  curve.rs  misc.rs  mod.rs  point.rs  random.rs  ray.rs  sample.rs  spectral.rs  transform.rs  vec.rs
src/parsing/: curves.rs  material.rs  mod.rs  primitives.rs
