[package]
name = "rust_pt_article"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.10.0"
rayon = "1.5.0"
num_cpus = "1.13.0"
rand = "0.8"
image = "0.24.3"
nalgebra = "0.31.0"
ordered-float = "3.0.0"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
exr = "1.4.2"
pbr = "1.0.3"
minifb = "0.23.0"
structopt = "0.3.26"

[build-dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"

[profile.dev]
opt-level = 3
panic='abort'
debug=true

[profile.test]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
