[package]
name = "rust_pt_article"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 3
panic = 'abort'
debug = true

[profile.test]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
