[package]
name = "rust_pt_article"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "~0.24"       # for writing png images to disk
minifb = "~0.25"      # for previewing rgb image buffers
packed_simd = "0.3.9" # for SIMD data types
rand = "~0.8"

[profile.dev]
opt-level = 3
panic = 'abort'
debug = true

[profile.test]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
